--- a/task-2.html
+++ b/task-2.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/comon.css" />
+    <link rel="stylesheet" href="./css/task-2.css" />
   </head>
   <body>
+    <ul class="gallery"></ul>
     <script src="./js/task-2.js" type="module"></script>
   </body>
 </html>
